[webui] Fix v8/webkit rendering issues in CodeMirror editor.
We inherit 'overflow:auto' for <pre/> elements from the Bento theme
(base.css). Firefox handles this correctly but Chrome and
Webkit-Browsers somehow think they should display garbled scrollbars...

--- a/src/webui/public/stylesheets/cm2/suse.css
+++ b/src/webui/public/stylesheets/cm2/suse.css
@@ -37,6 +37,10 @@
   padding: 0; margin: 0;
   white-space: pre;
   word-wrap: normal;
+  /* We inherit 'overflow: auto;' from the Bento CSS theme. Both v8 and webkit engines thus
+   * render garbage scrollbars. Setting to hidden is ok here, the '.CodeMirror pre' elements
+   * aren't supposed to be scrollable... */
+  overflow: hidden;
 }
 .CodeMirror textarea {
   font-family: inherit !important;
